cmake_minimum_required(VERSION 3.22)
project(samsung_algorithm)

set(CMAKE_CXX_STANDARD 14)

add_executable(samsung_algorithm main.cpp tree_post_order_search.cpp tree_in_order_search.cpp double_linked_list.cpp single_linked_list.cpp lca.cpp union_find.cpp kruskal.cpp heap.cpp min_max_heap.cpp min_heap_advanced.cpp heap_basic.cpp upper_bound.cpp binary_search.cpp greedy_sort.cpp parametric_search.cpp trie.cpp parametric_search_v2.cpp sortings.cpp directory.cpp)
